Revise index.html for improved content and structure
Updated the HTML structure and content for the sofa upholstery service page, enhancing SEO and user engagement with detailed sections on reupholstering benefits, processes, and fabric choices.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
-<!DOCTYPE html>
+<!doctype html> 
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sofa Upholstery Dubai</title>
-</head>
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Sofa Upholstery: Restore Comfort and Style
+  </title>
+</head> 
 <body>
-  <h1>Sofa Upholstery Dubai</h1>
-  <p>
-    Transform your furniture with professional 
-    <a href="https://sofaupholsterer.ae/" target="_blank">sofa upholstery</a> 
-    services in Dubai. Enjoy premium fabrics, modern styles, and expert craftsmanship that bring new life to your living space.
-  </p>
-</body>
-</html>
+<article>
+<h1>
+Sofa Upholstery: Restore Comfort and Style
+</h1>
+<p>Refreshing your sofa with professional upholstery is one of the smartest ways to extend the life of a favorite piece while updating the room’s style. Whether your sofa shows signs of wear, the fabric no longer matches your décor, or the cushioning has lost its bounce, a careful reupholstery job can transform the piece and save you the expense and waste of replacement.</p>
+
+<h2>When to Reupholster vs Replace</h2>
+<p>Before committing to a new sofa, evaluate the frame, springs, and overall construction. If the frame is solid and the springs or webbing can be repaired, reupholstery is usually worth it. Replace when the structure is damaged beyond reasonable repair or when the cost of reupholstering approaches the price of a new, comparable sofa.</p>
+
+<h2>Benefits of Professional Upholstery</h2>
+<ul>
+  <li><strong>Cost-effectiveness:</strong> Reupholstering often costs less than a high-quality replacement and preserves the value of well-made frames.</li>
+  <li><strong>Customization:</strong> Choose any fabric, pattern, or trim to match your interior design goals.</li>
+  <li><strong>Sustainability:</strong> Reuse existing furniture and reduce landfill waste.</li>
+  <li><strong>Improved Comfort:</strong> Replace worn foam and springs for better support and ergonomics.</li>
+</ul>
+
+<h2>How the Process Works</h2>
+<p>Professional upholstery typically follows these steps: inspection, disassembly, structural repairs (if needed), replacement of padding and springs, pattern cutting, sewing, and final fitting. Experienced upholsterers retain original pieces as templates, ensuring new fabric aligns with the sofa’s contours and original design lines.</p>
+
+<h2>Choosing Fabric and Filling</h2>
+<p>Fabric selection depends on use, aesthetic, and maintenance needs. Common choices include:</p>
+<ul>
+  <li><strong>Natural fibers</strong> (linen, cotton): breathable and comfortable but may require protective treatments.</li>
+  <li><strong>Wool blends:</strong> durable and resistant to pilling with a luxurious feel.</li>
+  <li><strong>Performance fabrics:</strong> engineered for stain resistance and easy cleaning—ideal for homes with children or pets.</li>
+  <li><strong>Leather:</strong> durable and ages well but needs proper conditioning.</li>
+</ul>
+<p>For filling, high-resilience foam with a dacron wrap is a common choice for modern sofas, providing a balance between support and cushioning. Down or feather fills offer plush comfort but require regular maintenance to avoid flattening.</p>
+
+<h2>Cost Considerations</h2>
+<p>Costs vary widely based on fabric choice, complexity of the sofa, and labor. Simple two-seater sofas with standard fabric will cost less than custom fabrics, intricate piping, or sofas with detailed trims and tufting. Always request a clear written estimate that breaks down materials, labor, and any repairs.</p>
+
+<h2>Finding the Right Upholsterer</h2>
+<p>Look for businesses or craftspeople with verifiable experience, a portfolio of completed projects, and transparent customer reviews. A reputable upholsterer will inspect the piece in person and provide a timeline and warranty for workmanship. For local options and professional services in the UAE, consider searching specifically for specialists who understand regional fabric availability and climate considerations like humidity and sunlight exposure; one such service is available at <a href="https://sofaupholsterer.ae">sofa upholstery Dubai</a>.</p>
+
+<h2>Final Tips</h2>
+<p>Keep original cushions and covers as templates, take photos before disassembly, and discuss fabric performance and cleaning methods with your upholsterer. With a thoughtful approach, reupholstering delivers a renewed sofa that fits your lifestyle and lasts for years.</p>
+
+
 
